[metadata]
name = hsrnoise_wrapper
version = 0.2
summary = OpenMDAO component wrapper for HSR_Noise
description-file = README.txt
keywords = openmdao
home-page = https://github.com/OpenMDAO-Plugins/hsrnoise_wrapper
download-url = 
author = Eric Hendricks
author-email = eric.hendricks@nasa.gov
maintainer = Kenneth Moore
maintainer-email = kenneth.t.moore-1@nasa.gov
license = Apache License, Version 2.0
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = 
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]

